Bug 530372 - Replace PR_MIN/PR_MAX with NS_MIN/NS_MAX in svg smil, r=jwatt